User page: Image selection

--- a/app/views/user.ejs
+++ b/app/views/user.ejs
@@ -105,7 +105,18 @@
             Image:
           </td>
           <td>
-            <input type="file" />
+            <select name="images" id="image-dropdown">
+              <option value="/img/Apple.jpeg">Apple</option>
+              <option value="/img/BlackBerry.jpeg">BlackBerry</option>
+              <option value="/img/HTC.jpeg">HTC</option>
+              <option value="/img/Huawei.jpeg">Huawei</option>
+              <option value="/img/LG.jpeg">LG</option>
+              <option value="/img/Motorola.jpeg">Motorola</option>
+              <option value="/img/Nokia.jpeg">Nokia</option>
+              <option value="/img/Samsung.jpeg">Samsung</option>
+              <option value="/img/Sony.jpeg">Sony</option>
+            </select>
+            <!-- <input type="file" /> -->
           </td>
         </tr>
       </table>
