--- a/app/views/verify.ejs
+++ b/app/views/verify.ejs
@@ -1,4 +1,4 @@
 <tbody>
     <h2>Welcome to OldPhoneDeals</h2>
-    <a  href= <%= confirm_link  %>> Confirm Email </a>
+    <a  href= "<%= confirm_link  %>"> Confirm Email </a>
 </tbody>
