--- a/app/views/passwordChange.ejs
+++ b/app/views/passwordChange.ejs
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
+<head>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+</head>
 <table id="change-password-table">
     <tr>
       <td>
@@ -11,14 +14,21 @@
     </tr>
     <tr>
         <td>
-            <button onclick="function test (e){
-                server.get('/changePasswordByEmail', {email: email, uniqueString: uniqueString, password: document.getElementById('pass-box').value})
-            } test();"> confirm </button>
+            <button>confirm</button>
         </td>
     </tr>
   </table>
   <script>
     var email = "<%= email %>";
     var uniqueString = "<%= uniqueString %>";
+    
+    $("button").click(async function (e) {
+      let password = $("#pass-box").val();
+      let params = {
+        password: password
+      }
+      await $.post("/user/updatePassword", params); //change the route name
+    })
   </script>
+  <!-- <script src="js/passwordChange.js"></script> -->
   </html>
