--- a/app/views/passwordChange.ejs
+++ b/app/views/passwordChange.ejs
@@ -25,9 +25,12 @@
     $("button").click(async function (e) {
       let password = $("#pass-box").val();
       let params = {
-        password: password
+        password: password,
+        email: email,
+        uniqueString: uniqueString
       }
-      await $.post("/user/updatePassword", params); //change the route name
+      //await $.post("/user/updatePassword", params); //change the route name
+      await $.post("/user/changePasswordByEmail", params); //change the route name
     })
   </script>
   <!-- <script src="js/passwordChange.js"></script> -->
